--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,3 +1,6 @@
+---
+title: "TOD-Archipelago Documentation"
+---
 # TOD Archipelago Documentation Repository
 
 Archipelago Commons, or simply Archipelago, is an evolving Open Source Digital Objects Repository / DAM Server Architecture based on the popular CMS [`Drupal8/9`](https://www.drupal.org) and released under [`GPL V.3 License`](https://www.gnu.org/licenses/gpl-3.0.txt).
