--- a/docs/about.Rmd
+++ b/docs/about.Rmd
@@ -1,3 +1,10 @@
+---
+title: "about"
+author: "TOD"
+date: "26-03-2022"
+output: html_document
+---
+
 # TOD Archipelago Documentation Repository
 
 Archipelago Commons, or simply Archipelago, is an evolving Open Source Digital Objects Repository / DAM Server Architecture based on the popular CMS [`Drupal8/9`](https://www.drupal.org) and released under [`GPL V.3 License`](https://www.gnu.org/licenses/gpl-3.0.txt).
